tests/neg/semantic_undefined_var.baa
// EXPECT: [Error]
// EXPECT: خطأ دلالي
// EXPECT: إسناد إلى متغير غير معرّف
// EXPECT: عرّف المتغير قبل استخدامه
صحيح الرئيسية() {
    س = 1.
    إرجع 0.
}
